--- a/index-zh.html
+++ b/index-zh.html
@@ -1,119 +1,140 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>亚马逊 Pai D’égua 商店</title>
-    <link rel="stylesheet" href="./css/estilos.css" />
-  </head>
-  <body>
-    <div id="seletor-idioma">
-      <label for="idioma"><strong>🌍 语言:</strong></label>
-      <select id="idioma" onchange="mudarIdioma(this.value)">
-        <option value="index.html">🇧🇷 Português</option>
-        <option value="index-en.html">🇺🇸 English</option>
-        <option value="index-es.html">🇪🇸 Español</option>
-        <option value="index-zh.html" selected>🇨🇳 中文</option>
-      </select>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>亚马逊 Pai D’égua 商店</title>
+  <link rel="stylesheet" href="./css/estilos.css" />
+</head>
+
+<body>
+  <div id="seletor-idioma">
+    <label for="idioma"><strong>🌍 语言:</strong></label>
+    <select id="idioma" onchange="mudarIdioma(this.value)">
+      <option value="index.html">🇧🇷 Português</option>
+      <option value="index-en.html">🇺🇸 English</option>
+      <option value="index-es.html">🇪🇸 Español</option>
+      <option value="index-zh.html" selected>🇨🇳 中文</option>
+    </select>
+  </div>
+
+  <header>
+    <div class="header-container max-container">
+      <h1>🌿 Pai D’égua</h1>
+
+      <nav>
+        <ul>
+          <li><a href="#">首页</a></li>
+          <li><a href="#destaque">菜单</a></li>
+          <li><a href="#contato">联系方式</a></li>
+        </ul>
+      </nav>
+
+      <div id="idioma-bandeiras">
+        <a href="index.html"><img src="img/brasil.png" alt="葡萄牙语" width="32" /></a>
+        <a href="index-en.html"><img src="img/eua.png" alt="英语" width="32" /></a>
+        <a href="index-es.html"><img src="img/espanha.png" alt="西班牙语" width="32" /></a>
+        <a href="index-zh.html"><img src="img/chines.png" alt="中文" width="32" /></a>
+      </div>
+
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <h1>🌿 亚马逊 Pai D’égua 商店</h1>
+      <p>
+        一切都始于一群帕拉州立大学的学生在化学实验室里尝试制作 tacacá。jambu 从锅里逃了出来，tucupi 沸腾得厉害，有人大喊：“这太'pai d'égua'了！” 那时，一个想法诞生了：创建一个商店，提供区域性套件，让任何人都不必成为化学家也能品尝到亚马逊的风味。
+      </p>
+    </section>
+
+    <section id="destaque">
+      <h2>✨ 区域食材套件</h2>
+      <p>
+        用我们典型的亚马逊套件，带一小片森林回家吧！
+      </p>
+    </section>
+
+    <section id="produtos" class="max-container">
+      <div class="card-produto">
+        <img src="img/produtos/kitAcai.png" alt="阿萨伊套件" />
+        <h3>传统阿萨伊套件</h3>
+        <p>阿萨伊果肉、木薯粉和本地蜂蜂蜜。</p>
+        <p><strong>R$ 49,90</strong></p>
+        <button>购买</button>
+      </div>
+
+      <div class="card-produto">
+        <img src="img/produtos/kitJabu.png" alt="Jambu套件" />
+        <h3>Jambu 和 Tucupi 套件</h3>
+        <p>非常适合在家准备 tacacá 或炖鸭。</p>
+        <p><strong>R$ 59,90</strong></p>
+        <button>购买</button>
+      </div>
+
+      <div class="card-produto">
+        <img src="img/produtos/kitDoce.png" alt="亚马逊甜点套件" />
+        <h3>亚马逊甜点套件</h3>
+        <p>库普阿苏果酱、巴库里糖和巴西坚果巧克力。</p>
+        <p><strong>R$ 39,90</strong></p>
+        <button>购买</button>
+      </div>
+
+      <div class="card-produto">
+        <img src="img/produtos/kitPirarucu.png" alt="巨骨舌鱼套件" />
+        <h3>烟熏巨骨舌鱼套件</h3>
+        <p>来自亚马逊的珍贵鱼类，配以区域性调味料。</p>
+        <p><strong>R$ 69,90</strong></p>
+        <button>购买</button>
+      </div>
+    </section>
+
+    <section class="cta-section max-container" id="contato">
+      <p class="cta-description">首次购买可享受高达20%的折扣！</p>
+      <form class="cta-form">
+        <input type="email" id="email" placeholder="输入您的电子邮件" required>
+        <button type="submit" class="cta-button">获取您的优惠券！</button>
+      </form>
+    </section>
+
+  </main>
+
+  <footer>
+    <h3>📍 我们的位置</h3>
+    <p>
+      实体位置:
+      <a href="https://www.google.com/maps?q=UEPA+Telegrafo" target="_blank">帕拉州立大学 – Telégrafo校区</a>, 贝伦/帕拉州
+    </p>
+    <p>
+      📱 WhatsApp 服务:
+      <a href="https://wa.me/5591999999999" target="_blank">(91) 99999-9999</a>
+    </p>
+
+    <iframe src="https://www.google.com/maps?q=UEPA+Telegrafo&output=embed" width="100%" height="300" style="border: 0"
+      allowfullscreen loading="lazy">
+    </iframe>
+
+    <div class="footer-links">
+      <h4>🔗 实用链接</h4>
+      <ul>
+        <li><a href="#">关于我们</a></li>
+        <li><a href="#">常见问题 (FAQ)</a></li>
+        <li><a href="#">隐私政策</a></li>
+        <li><a href="#">使用条款</a></li>
+      </ul>
     </div>
 
-    <header>
-      <div class="header-container max-contaier">
-        <h1>🌿 亚马逊 Pai D’égua</h1>
+    <div class="footer-copy">
+      <p>© 2025 Amazônia Pai D’égua. 保留所有权利。</p>
+    </div>
+  </footer>
 
-        <div id="idioma-bandeiras">
-          <a href="index.html"
-            ><img src="img/brasil.png" alt="Português" width="32"
-          /></a>
-          <a href="index-en.html"
-            ><img src="img/eua.png" alt="English" width="32"
-          /></a>
-          <a href="index-es.html"
-            ><img src="img/espanha.png" alt="Español" width="32"
-          /></a>
-          <a href="index-zh.html"
-            ><img src="img/chines.png" alt="中文" width="32"
-          /></a>
-        </div>
-      </div>
-    </header>
+  <script>
+    function mudarIdioma(pagina) {
+      window.location.href = pagina;
+    }
+  </script>
+</body>
 
-    <main class="max-contaier">
-      <section class="hero">
-        <h1>🌿 亚马逊 Pai D’égua 商店</h1>
-        <p>
-          这一切始于一群 UEPA
-          学生试图在化学实验室制作tacacá。jambu从锅里逃了出来，tucupi沸腾得太厉害，有人喊道：“这太‘pai
-          d’égua’了！”于是，这个想法诞生了：创建一个出售区域特色套装的商店，这样就没人需要成为化学家来品尝亚马逊了。
-        </p>
-      </section>
-
-      <section id="destaque">
-        <h2>✨ 区域特色食材套装</h2>
-        <p>带一小片森林回家，使用我们典型的亚马逊套装！</p>
-      </section>
-
-      <section id="produtos">
-        <div class="card-produto">
-          <img src="img/produtos/kitAcai.png" alt="阿萨伊套装" />
-          <h3>传统阿萨伊套装</h3>
-          <p>阿萨伊果肉、木薯粉和原生蜜蜂蜂蜜。</p>
-          <p><strong>R$ 49,90</strong></p>
-        </div>
-
-        <div class="card-produto">
-          <img src="img/produtos/kitJabu.png" alt="Jambu套装" />
-          <h3>Jambu 和 Tucupi 套装</h3>
-          <p>非常适合在家制作 tacacá 或 pato no tucupi。</p>
-          <p><strong>R$ 59,90</strong></p>
-        </div>
-
-        <div class="card-produto">
-          <img src="img/produtos/kitDoce.png" alt="亚马逊甜点套装" />
-          <h3>亚马逊甜点套装</h3>
-          <p>cupuaçu果冻、bacuri糖果和巴西坚果巧克力。</p>
-          <p><strong>R$ 39,90</strong></p>
-        </div>
-
-        <div class="card-produto">
-          <img src="img/produtos/kitPirarucu.png" alt="Pirarucu套装" />
-          <h3>熏制 Pirarucu 套装</h3>
-          <p>带有区域香料的亚马逊高贵鱼类。</p>
-          <p><strong>R$ 69,90</strong></p>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <h3>📍 我们在哪里</h3>
-      <p>
-        实体位置:
-        <a href="https://www.google.com/maps?q=UEPA+Telegrafo" target="_blank"
-          >UEPA – Campus Telégrafo</a
-        >, Belém/PA
-      </p>
-      <p>
-        📱 WhatsApp 服务:
-        <a href="https://wa.me/5591999999999" target="_blank"
-          >(91) 99999-9999</a
-        >
-      </p>
-
-      <iframe
-        src="https://www.google.com/maps?q=UEPA+Telegrafo&output=embed"
-        width="100%"
-        height="300"
-        style="border: 0"
-        allowfullscreen
-        loading="lazy"
-      >
-      </iframe>
-    </footer>
-
-    <script>
-      function mudarIdioma(pagina) {
-        window.location.href = pagina;
-      }
-    </script>
-  </body>
 </html>
