--- a/index-es.html
+++ b/index-es.html
@@ -102,6 +102,10 @@
       </form>
     </section>
 
+     <a href="https://wa.me/5591999999999" class="btn-whatsapp" target="_blank">
+      <img src="img/whatsapp.png" alt="WhatsApp">
+    </a>
+
   </main>
 
   <footer>
