--- a/index-zh.html
+++ b/index-zh.html
@@ -98,6 +98,10 @@
       </form>
     </section>
 
+     <a href="https://wa.me/5591999999999" class="btn-whatsapp" target="_blank">
+      <img src="img/whatsapp.png" alt="WhatsApp">
+    </a>
+
   </main>
 
   <footer>
