--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
       </form>
     </section>
 
+    <a href="https://wa.me/5591999999999" class="btn-whatsapp" target="_blank">
+      <img src="img/whatsapp.png" alt="WhatsApp">
+    </a>
+
   </main>
 
   <!-- FOOTER: Contato e localização -->
